tests/negative/gold/global-no-value-test.gold
tests/negative/global-no-value-test.toit:5:1: error: Global variables must have initializers
global / any
^~~~~~
Compilation failed
